使用 Colaboratory 创建

--- a/rl_notes/rl_basic.ipynb
+++ b/rl_notes/rl_basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZwxhRMoq16t+zmtCTx6fX",
+      "authorship_tag": "ABX9TyM1+z9lCcvbq4JPWWSSxzyz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,11 +34,26 @@
         "The idea behind Reinforcement Learning is that an agent (an AI) will learn from the environment by interacting with it (through trial and error) and receiving rewards (negative or positive) as feedback for performing actions.\n",
         "\n",
         "Reinforcement learning is a framework for solving control tasks (also called decision problems) by building agents that learn from the environment by interacting with it through trial and error and receiving rewards (positive or negative) as unique feedback.\n",
+        "## Teminology\n",
+        "Term  | Explain | Formular(Category)\n",
+        "--------|-----------|-------------\n",
+        "state  | \n",
+        "actioin |\n",
+        "reward | a scalar feedback signal(random variable) which indicate how well the agent is doning at step t| $R_t$\n",
+        "return | cumulative future reward(random variable) | $G_t=R_{t+1}+γR_{t+2}+γ^2R_{t+3}+...= R_{t+1}+γG_{t+1}$\n",
+        "policy| agent's behave function, mappiing from state to action | Deterministic policy ($π(s)$) vs stochastive policy ($π(a|s):P[A_t=a|S_t=s]$)\n",
+        "value fuction| how good is each state or action | \n",
+        "state-value function| the mean of all possible trajectory return  |$V_{π}(s)=E_π[G_t|S_t=s]$ |\n",
+        "action-value function| |$q_{π}(s,a)=E_π[G_t|S_t=s,A_t=a]$ |\n",
+        "model| agenet's representaion of the enviroment \n",
+        "enviroment|\n",
         "\n",
-        "## The reward hypothesis: the central idea of Reinforcement Learning\n",
         "\n",
-        "⇒ Why is the goal of the agent to **maximize the expected return**?\n",
         "\n",
+        "## **The reward hypothesis**: the central idea of Reinforcement Learning\n",
+        "\n",
+        "⇒ Why is the goal of the agent to **maximize the expected cumulative return**?\n",
+        "reward can be interpreted as a **Human-Maichine Interface** with which we can guild the agent to behave as what we expect.\n",
         "Because RL is based on the reward hypothesis, which is that all goals can be described as the maximization of the expected return (expected cumulative reward).\n",
         "\n",
         "That’s why in Reinforcement Learning, to have the best behavior, we aim to learn to take actions that maximize the expected cumulative reward.\n",
@@ -78,15 +93,57 @@
         "**The value of a state**：the expected discounted return the agent can get if it starts at that state and then acts according to our policy.\n",
         "(“Act according to our policy” just means that our policy is “going to the state with the highest value”.)\n",
         "\n",
-        "## Two types of value-based methods:\n",
         "\n",
         "\n",
         "\n",
+        "# Markove Decision Process\n",
         "\n",
         "\n"
       ],
       "metadata": {
         "id": "_cv3csK_WBQc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The Bellman Equation: simplify our value estimation\n",
+        "the idea of the Bellman equation is that instead of calculating each value as the sum of the expected return, which is a long process, we calculate the value as the **mean** of **immediate reward** + **the discounted value of the state that follows**.  \n",
+        "$V_{π}(s)=E_π[G_t|S_t=s]$  \n",
+        "$V_{π}(s)=E_π[R_{t+1}+γR_{t+2}+γ^2R_{t+3}+...|S_t=s]$  \n",
+        "$V_{π}(s)=E_π[R_{t+1}+γG_{t+1}|S_t=s]$  \n",
+        "$V_{π}(s)=E_π[R_{t+1}|S_t=s]+γE_π[G_{t+1}|S_t=s]$  \n",
+        "$V_{π}(s)=E_π[R_{t+1}|S_t=s]+γ\\sum_{s'}p(s'|s)E_π[G_{t+1}|S_t=s,S_{t+1}=s']$  \n",
+        "because of Markove propery of \n",
+        "$V_{π}(s)=E_π[R_{t+1}|S_t=s]+γ\\sum_{s'}p(s'|s)E_π[G_{t+1}|S_{t+1}=s']$  \n",
+        "$V_{π}(s)=E_π[R_{t+1}|S_t=s]+γ\\sum_{s'}p(s'|s)V_{π}(s')$  \n",
+        "$V_{π}(s)=E_π[R_{t+1}|S_t=s]+γE_π[V_{\\pi}(s')|S_t=s]$\n",
+        "\n",
+        "-----\n",
+        "\n",
+        "$q_{π}(s,a)=E_π[G_t|S_t=s,A_t=a]$  \n",
+        "$q_{π}(s,a)=E_π[R_{t+1}+γG_{t+1}|S_t=s,A_t=a]$  \n",
+        "$q_{π}(s,a)=E_π[R_{t+1}|S_t=s,A_t=a]+γE_π[G_{t+1}|S_t=s,A_t=a]$  \n",
+        "$q_{π}(s,a)=E_π[R_{t+1}|S_t=s,A_t=a]+γ\\sum_{s'}p(s'|s,a)E_π[G_{t+1}|S_t=s,A_t=a,S_{t+1}=s']$ \n",
+        "because of Markove propery\n",
+        "$q_{π}(s,a)=E_π[R_{t+1}|S_t=s,A_t=a]+γ\\sum_{s'}p(s'|s,a)E_π[G_{t+1}|S_{t+1}=s']$  \n",
+        "$q_{π}(s,a)=E_π[R_{t+1}|S_t=s,A_t=a]+γ\\sum_{s'}p(s'|s,a)\\sum_{a'}π(a'|s')E_π[G_{t+1}|S_{t+1}=s',A_{t+1}=a']$  \n",
+        "$q_{π}(s,a)=E_π[R_{t+1}|S_t=s,A_t=a]+γ\\sum_{s'}p(s'|s,a)\\sum_{a'}π(a'|s')q_{π}(s',a')]$\n",
+        "$q_{π}(s,a)=E_π[R_{t+1}|S_t=s,A_t=a]+γE_π[q_{π}(s',a')||S_t=s,A_t=a]$"
+      ],
+      "metadata": {
+        "id": "3XKMegfzsxjR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Monte Carlo vs Temporal Difference Learning\n",
+        "\n",
+        "Monte Carlo uses an entire episode of experience before learning. On the other hand, Temporal Difference uses only a step to learn.\n"
+      ],
+      "metadata": {
+        "id": "r55IJ3_Ns9iQ"
       }
     },
     {
