--- a/rl_notes/rl_basic.ipynb
+++ b/rl_notes/rl_basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1+z9lCcvbq4JPWWSSxzyz",
+      "authorship_tag": "ABX9TyMOI7Vi9nJ5TpuhciCRcm/9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,32 +69,6 @@
         "This Policy is the function we want to learn, our goal is to find the optimal policy π*, the policy that maximizes expected return when the agent acts according to it. We find this π* through training.\n",
         "\n",
         "\n",
-        "There are two approaches to train our agent to find this optimal policy π*:\n",
-        "\n",
-        "\n",
-        "# Two main approaches for solving RL problems\n",
-        "## Policy-Based Methods\n",
-        "  \n",
-        "Directly, by teaching the agent to learn which action to take, given the current state. we learn a policy function directly.\n",
-        "This function will define a mapping from each state to the best corresponding action. \n",
-        "\n",
-        "Alternatively, it could define a probability distribution over the set of possible actions at that state.\n",
-        "\n",
-        "\n",
-        "## value-based methods\n",
-        "  \n",
-        "Indirectly, teach the agent to learn which state is more valuable and then take the action that leads to the more valuable states.\n",
-        "  1. **policy evaluation**: use the state value function or state-action value function to evalute the policy function\n",
-        "  2. **policy update**: use greedy policy or $ϵ$-greed policy\n",
-        "\n",
-        "In value-based methods, instead of learning a policy function, we learn a value function (that outputs the value of a state or a state-action pair) that maps a state to the expected value of being at that state.\n",
-        "Given this value function, our policy will take an action.\n",
-        "\n",
-        "**The value of a state**：the expected discounted return the agent can get if it starts at that state and then acts according to our policy.\n",
-        "(“Act according to our policy” just means that our policy is “going to the state with the highest value”.)\n",
-        "\n",
-        "\n",
-        "\n",
         "\n",
         "# Markove Decision Process\n",
         "\n",
@@ -134,6 +108,53 @@
       "metadata": {
         "id": "3XKMegfzsxjR"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## The Bellman Optimality Equation"
+      ],
+      "metadata": {
+        "id": "noNHD-MvzU1-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There are two approaches to train our agent to find this optimal policy π*:\n",
+        "\n",
+        "# Two main approaches for solving RL problems\n",
+        "## value-based methods(Value iteration algorithm)\n",
+        "  \n",
+        "Indirectly, teach the agent to learn which state is more valuable and then take the action that leads to the more valuable states.\n",
+        "  1. **policy update**: use the state value function or state-action value function to evalute the policy function\n",
+        "  2. **value update**: use greedy policy or $ϵ$-greed policy\n",
+        "\n",
+        "In value-based methods, instead of learning a policy function, we learn a value function (that outputs the value of a state or a state-action pair) that maps a state to the expected value of being at that state.\n",
+        "Given this value function, our policy will take an action.\n",
+        "\n",
+        "**The value of a state**：the expected discounted return the agent can get if it starts at that state and then acts according to our policy.\n",
+        "(“Act according to our policy” just means that our policy is “going to the state with the highest value”.)\n",
+        "\n",
+        "## Policy-Based Methods (Policy iteration algorithm)\n",
+        "  \n",
+        "Directly, by teaching the agent to learn which action to take, given the current state. we learn a policy function directly.\n",
+        "This function will define a mapping from each state to the best corresponding action. \n",
+        "\n",
+        "Alternatively, it could define a probability distribution over the set of possible actions at that state.\n"
+      ],
+      "metadata": {
+        "id": "0pn_gZmhzbpb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HFmqH4yd11oF"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
